--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,9 @@
 html {
   scroll-behavior: smooth;
 }
+
+body {
+  background-color: #000000;
+  /* Optional: You can also set a margin of 0 to remove default browser spacing */
+  margin: 0;
+}
