--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,73 @@ body {
   /* Optional: You can also set a margin of 0 to remove default browser spacing */
   margin: 0;
 }
+
+@keyframes shoot-star-1 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(120px, -60px);
+    opacity: 0;
+  }
+}
+
+@keyframes shoot-star-2 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-100px, 80px);
+    opacity: 0;
+  }
+}
+
+@keyframes shoot-star-3 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(150px, 70px);
+    opacity: 0;
+  }
+}
+
+@keyframes shoot-star-4 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-90px, -100px);
+    opacity: 0;
+  }
+}
+
+@keyframes shoot-star-5 {
+  0% {
+    transform: translate(0, 0);
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  100% {
+    transform: translate(130px, 50px);
+    opacity: 0;
+  }
+}
