--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,22 @@ body {
   margin: 0;
 }
 
+/* Icon Pop Animation */
+.icon-pop {
+  animation: iconPop 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) forwards;
+}
+
+@keyframes iconPop {
+  0% {
+    opacity: 0;
+    transform: translate(-20px, -20px) scale(0) rotate(-180deg);
+  }
+  60% {
+    transform: translate(0, 0) scale(1.15) rotate(10deg);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0) scale(1) rotate(0deg);
+  }
+}
+
